@@ -1,0 +1,17 @@
+/*
+	crchash.h
+	hash functions for HCC
+
+	$Id$
+*/
+
+#ifndef _CRC_HASH_H
+#define _CRC_HASH_H
+
+#include "crc.h"
+
+#define	HASH_TABLE_SIZE		9973
+int	COM_Hash (const char *string);
+
+#endif	/* _CRC_HASH_H */
+
